fix - summary design: display welcome text aligned to the left

--- a/summary.css
+++ b/summary.css
@@ -173,7 +173,6 @@ h2{
 .welcome p{
     display: flex;
     flex-direction: column;
-    text-align: center;
 }
 
 .welcome_text{
